--- a/s3bucket.yml
+++ b/s3bucket.yml
@@ -5,6 +5,7 @@
     - easy_install:
         name: pip
         state: latest
+        become: yes
     - name: install Boto3 Python
       pip:
         name: boto3
