--- a/s3bucket.yml
+++ b/s3bucket.yml
@@ -9,6 +9,7 @@
       pip:
         name: boto3
         state: present
+        become: yes
       
     - name: create S3 Backend
       s3_bucket:
