--- a/s3bucket.yml
+++ b/s3bucket.yml
@@ -10,6 +10,7 @@
         name: boto3
         state: present
       become: yes
+      become_user: root
       
     - name: create S3 Backend
       s3_bucket:
